fix: adjust spacing between dates and titles

--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -18,7 +18,7 @@ mat-card {
   [date] {
     font-size: 12px;
     font-style: italic;
-    margin: -8px 0 8px 0;
+    margin: -8px 0 12px 0;
     opacity: 0.7;
   }
 
